rasqal.h

/**
 * rasqal_world:
 *
 * Rasqal world class.
 */
typedef struct rasqal_world_s rasqal_world;
/**
 * rasqal_query_results:
 *
 * Rasqal query results class.
 */
typedef struct rasqal_query_results_s rasqal_query_results;
typedef struct rasqal_literal_s rasqal_literal;
/**
 * rasqal_variables_table:
 *
 * Rasqal variables table class.
 */
typedef struct rasqal_variables_table_s rasqal_variables_table;
/**
 * rasqal_variable_type:
 * @RASQAL_VARIABLE_TYPE_NORMAL: The regular variable type.
 * @RASQAL_VARIABLE_TYPE_ANONYMOUS: Anonymous variable type.
 * @RASQAL_VARIABLE_TYPE_UNKNOWN: Internal.
 *
 * Rasqal variable types.
 *
 * ANONYMOUS can be used in queries but cannot be returned in a
 * result.
 */
typedef enum {
  RASQAL_VARIABLE_TYPE_UNKNOWN   = 0,
  RASQAL_VARIABLE_TYPE_NORMAL    = 1,
  RASQAL_VARIABLE_TYPE_ANONYMOUS = 2
} rasqal_variable_type;
/* forward reference */
struct rasqal_expression_s;
/**
 * rasqal_variable:
 * @vars_table: variables table that owns this variable
 * @name: Variable name.
 * @value: Variable value or NULL if unbound.
 * @offset: Internal.
 * @type: Variable type.
 * @expression: Expression when the variable is a computed SELECT expression 
 * @user_data: Pointer to user data associated with a variable.  This is not used by rasqal.
 * @usage: reference count
 *
 * Binding between a variable name and a value.
 *
 * Includes internal field @offset for recording the offset into the
 * (internal) rasqal_query variables array.
 */
typedef struct {
  rasqal_variables_table* vars_table;
  const unsigned char *name;
  rasqal_literal* value;
  int offset;
  rasqal_variable_type type;
  struct rasqal_expression_s* expression;
  void *user_data;
  int usage;
} rasqal_variable;
/**
 * rasqal_xsd_decimal:
 *
 * Rasqal XSD Decimal class.
 */
typedef struct rasqal_xsd_decimal_s rasqal_xsd_decimal;
/**
 * rasqal_xsd_date:
 * @year: year
 * @month: month 1-12
 * @day: 1-31
 * @timezone_minutes: minutes +/- against UTC or RASQAL_XSD_DATETIME_NO_TZ if there is no timezone in the dateTime.
 * @time_on_timeline: time on timeline of first instant of date in timezone
 * @have_tz: timezone flag: 'Z' if Zulu, 'Y' if has other timezone offset in @timezone_minutes, 'N' if there is no timezone
 *
 * XML schema date datatype (xsd:date)
 *
 * Examples of timezone fields:
 *  "2010-01-02" : timezone_minutes RASQAL_XSD_DATETIME_NO_TZ, have_tz 'N'
 *  "2010-01-02Z" : timezone_minutes 0, have_tz 'Z'
 *  "2010-01-02+00:00" : timezone_minutes 0, have_tz 'Y'
 *  "2010-01-02-01:00" : timezone_minutes -60, have_tz 'Y'
 */
typedef struct {
  signed int year;
  /* the following fields are integer values not characters */
  unsigned char month;
  unsigned char day;
  signed short timezone_minutes;
  time_t time_on_timeline;
  char have_tz;
} rasqal_xsd_date;
/**
 * rasqal_xsd_datetime:
 * @year: year
 * @month: month 1-12
 * @day: 1-31
 * @hour: hour 0-23
 * @minute: minute 0-59
 * @second: second 0-60 (yes 60 is allowed for leap seconds)
 * @microseconds: microseconds
 * @timezone_minutes: minutes +/- against UTC or RASQAL_XSD_DATETIME_NO_TZ if there is no timezone in the dateTime.
 * @time_on_timeline: time on timeline
 * @have_tz: timezone flag: 'Z' if Zulu, 'Y' if has other timezone offset in @timezone_minutes, 'N' if there is no timezone
 *
 * XML Schema dateTime datatype (xsd:dateTime)
 *
 * Signed types are required for normalization process where a value
 * can be negative temporarily.
 *
 * Examples of timezone fields:
 *  "2010-01-02T01:02:03" : timezone_minutes RASQAL_XSD_DATETIME_NO_TZ, have_tz 'N'
 *  "2010-01-02T01:02:03Z" : timezone_minutes 0, have_tz 'Z'
 *  "2010-01-02T01:02:03+00:00" : timezone_minutes 0, have_tz 'Y'
 *  "2010-01-02T01:02:03-01:00" : timezone_minutes -60, have_tz 'Y'
 */
typedef struct {
  signed int year;
  unsigned char month;
  unsigned char day;
  /* the following fields are integer values not characters */
  signed char hour;
  signed char minute;
  signed char second;
  signed int microseconds;
  signed short timezone_minutes;
  time_t time_on_timeline;
  char have_tz;
} rasqal_xsd_datetime;
/**
 * rasqal_expression:
 * @world: rasqal_world object
 * @usage: reference count - 1 for itself
 * @op: expression operation
 * @arg1: first argument
 * @arg2: second argument
 * @arg3: third argument (for #RASQAL_EXPR_REGEX )
 * @literal: literal argument
 * @value: UTF-8 value
 * @name: name for extension function qname(args...) and cast-to-uri
 * @args: args for extension function qname(args...), cast-to-uri and COALESCE
 * @params: args for extension function parameters (SPARQL 1.1) (Rasqal 0.9.20+)
 * @flags: bitflags from #rasqal_expression_flags for expressions (Rasqal 0.9.20+)
 * @arg4: fourth argument (for #RASQAL_EXPR_REPLACE )
 *
 * Expression with arguments
 *
 */
struct rasqal_expression_s {
  rasqal_world* world;

  int usage;
  
  rasqal_op op;

  struct rasqal_expression_s* arg1;
  struct rasqal_expression_s* arg2;
  struct rasqal_expression_s* arg3;
  rasqal_literal* literal;
  unsigned char *value;

  raptor_uri* name;
  raptor_sequence* args;

  raptor_sequence* params;
  unsigned int flags;
  struct rasqal_expression_s* arg4;
};
RASQAL_API
rasqal_xsd_datetime* rasqal_new_xsd_datetime_from_xsd_date(rasqal_world* world, rasqal_xsd_date *date);
RASQAL_API
void rasqal_free_xsd_datetime(rasqal_xsd_datetime* dt);
RASQAL_API
char* rasqal_xsd_datetime_to_counted_string(const rasqal_xsd_datetime *dt, size_t *len_p);
RASQAL_API
char* rasqal_xsd_datetime_to_string(const rasqal_xsd_datetime *dt);
RASQAL_API
int rasqal_xsd_datetime_equals2(const rasqal_xsd_datetime *dt1, const rasqal_xsd_datetime *dt2, int *incomparible_p);
RASQAL_API RASQAL_DEPRECATED
int rasqal_xsd_datetime_equals(const rasqal_xsd_datetime *dt1, const rasqal_xsd_datetime *dt2);
RASQAL_API
int rasqal_xsd_datetime_compare2(const rasqal_xsd_datetime *dt1, const rasqal_xsd_datetime *dt2, int *incomparible_p);
RASQAL_API RASQAL_DEPRECATED
int rasqal_xsd_datetime_compare(const rasqal_xsd_datetime *dt1, const rasqal_xsd_datetime *dt2);
RASQAL_API
rasqal_xsd_decimal* rasqal_xsd_datetime_get_seconds_as_decimal(rasqal_world* world, rasqal_xsd_datetime* dt);
RASQAL_API
int rasqal_xsd_datetime_set_from_timeval(rasqal_xsd_datetime *dt, struct timeval *tv);
RASQAL_API
int rasqal_xsd_datetime_set_from_unixtime(rasqal_xsd_datetime* dt, time_t clock);
RASQAL_API
time_t rasqal_xsd_datetime_get_as_unixtime(rasqal_xsd_datetime* dt);
RASQAL_API
struct timeval* rasqal_xsd_datetime_get_as_timeval(rasqal_xsd_datetime *dt);
RASQAL_API
char* rasqal_xsd_datetime_get_timezone_as_counted_string(rasqal_xsd_datetime *dt, size_t *len_p);
RASQAL_API
char* rasqal_xsd_datetime_get_tz_as_counted_string(rasqal_xsd_datetime* dt, size_t *len_p);
/* regex utilities */
RASQAL_API
char* rasqal_regex_replace(rasqal_world* world, raptor_locator* locator, const char* pattern, const char* regex_flags, const char* subject, size_t subject_len, const char* replace, size_t replace_len, size_t* result_len_p);
/**
 * rasqal_service:
 *
 * Rasqal SPARQL Protocol Service
 */
typedef struct rasqal_service_s rasqal_service;
  
RASQAL_API
rasqal_service* rasqal_new_service(rasqal_world* world, raptor_uri* service_uri, const unsigned char* query_string, raptor_sequence* data_graphs);
RASQAL_API
void rasqal_free_service(rasqal_service* svc);
RASQAL_API
rasqal_query_results* rasqal_service_execute(rasqal_service* svc);
RASQAL_API
int rasqal_service_set_www(rasqal_service* svc, raptor_www* www);
RASQAL_API
int rasqal_service_set_format(rasqal_service* svc, const char *format);
/**
 * rasqal_triple_parts:
 * @RASQAL_TRIPLE_NONE: no parts
 * @RASQAL_TRIPLE_SUBJECT: Subject present in a triple.
 * @RASQAL_TRIPLE_PREDICATE: Predicate present in a triple.
 * @RASQAL_TRIPLE_OBJECT: Object present in a triple.
 * @RASQAL_TRIPLE_ORIGIN: Origin/graph present in a triple.
 * @RASQAL_TRIPLE_GRAPH:  Alias for RASQAL_TRIPLE_ORIGIN
 * @RASQAL_TRIPLE_SPO: Subject, Predicate and Object present in a triple.
 * @RASQAL_TRIPLE_SPOG: Subject, Predicate, Object, Graph present in a triple.
 *
 * Flags for parts of a triple.
 */
typedef enum {
  RASQAL_TRIPLE_NONE     = 0,
  RASQAL_TRIPLE_SUBJECT  = 1,
  RASQAL_TRIPLE_PREDICATE= 2,
  RASQAL_TRIPLE_OBJECT   = 4,
  RASQAL_TRIPLE_ORIGIN   = 8,
  RASQAL_TRIPLE_GRAPH    = RASQAL_TRIPLE_ORIGIN,
  RASQAL_TRIPLE_SPO      = RASQAL_TRIPLE_SUBJECT | RASQAL_TRIPLE_PREDICATE | RASQAL_TRIPLE_OBJECT,
  RASQAL_TRIPLE_SPOG     = RASQAL_TRIPLE_SPO | RASQAL_TRIPLE_GRAPH
} rasqal_triple_parts;
/**
 * rasqal_triples_match:
 * @world: rasqal_world object
 * @user_data: User data pointer for factory methods.
 * @bind_match: The [4]array (s,p,o,origin) bindings against the current triple match only touching triple parts given. Returns parts that were bound or 0 on failure.
 * @next_match: Move to next match.
 * @is_end: Check for end of triple match - return non-0 if is end.
 * @finish: Finish triples match and destroy any allocated memory.
 * @is_exact: non-0 if triple to match is all literal constants
 * @finished: >0 if the match has finished
 * 
 * Triples match structure as initialised by #rasqal_triples_source
 * method init_triples_match.
 */
struct rasqal_triples_match_s {
  rasqal_world *world;

  void *user_data;

  rasqal_triple_parts (*bind_match)(struct rasqal_triples_match_s* rtm, void *user_data, rasqal_variable *bindings[4], rasqal_triple_parts parts);

  void (*next_match)(struct rasqal_triples_match_s* rtm, void *user_data);

  int (*is_end)(struct rasqal_triples_match_s* rtm, void *user_data);

  void (*finish)(struct rasqal_triples_match_s* rtm, void *user_data);

  int is_exact;

  int finished;
};
typedef struct rasqal_triples_match_s rasqal_triples_match;
/**
 * rasqal_triple_meta:
 * @bindings: Variable bindings for this triple+origin to set.
 * @triples_match: The matcher that is setting these bindings.
 * @context: Context data used by the matcher.
 * @parts: Bitmask of #rasqal_triple_parts flags describing the parts of the triple pattern that will bind to variables.  There may also be variables mentioned that are bound in other triple patterns even if @parts is 0.
 * @is_exact: unused
 * @executed: unused
 *
 * Metadata for triple pattern matching for one triple pattern.
 */
typedef struct {
  /* triple (subject, predicate, object) and origin */
  rasqal_variable* bindings[4];

  rasqal_triples_match *triples_match;

  void *context;

  rasqal_triple_parts parts;

  int is_exact;

  int executed;
} rasqal_triple_meta;
  

/**
 * rasqal_triples_source:
 * @version: API version - only V1 is defined for now
 * @query: Source for this query.
 * @user_data: Context user data passed into the factory methods.
 * @init_triples_match: Factory method to initalise a new #rasqal_triples_match.
 * @triple_present: Factory method to return presence or absence of a complete triple.
 * @free_triples_source: Factory method to deallocate resources.
 * @support_feature: Factory method to test support for a feature, returning non-0 if supported
 *
 * Triples source as initialised by a #rasqal_triples_source_factory.
 */
struct rasqal_triples_source_s {
  int version;
  
  rasqal_query* query;

  void *user_data;

  /* API v1 */
  int (*init_triples_match)(rasqal_triples_match* rtm, struct rasqal_triples_source_s* rts, void *user_data, rasqal_triple_meta *m, rasqal_triple *t);

  int (*triple_present)(struct rasqal_triples_source_s* rts, void *user_data, rasqal_triple *t);

  void (*free_triples_source)(void *user_data);

  /* API v2 onwards */
  int (*support_feature)(void *user_data, rasqal_triples_source_feature feature);
};
typedef struct rasqal_triples_source_s rasqal_triples_source;