src/bindgen.rs

extern "C" {
    pub fn rasqal_new_xsd_datetime_from_xsd_date(
        world: *mut rasqal_world,
        date: *mut rasqal_xsd_date,
    ) -> *mut rasqal_xsd_datetime;
}
extern "C" {
    pub fn rasqal_free_xsd_datetime(dt: *mut rasqal_xsd_datetime);
}
extern "C" {
    pub fn rasqal_xsd_datetime_to_counted_string(
        dt: *const rasqal_xsd_datetime,
        len_p: *mut usize,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn rasqal_xsd_datetime_to_string(dt: *const rasqal_xsd_datetime) -> *mut libc::c_char;
}
extern "C" {
    pub fn rasqal_xsd_datetime_equals2(
        dt1: *const rasqal_xsd_datetime,
        dt2: *const rasqal_xsd_datetime,
        incomparible_p: *mut libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_datetime_equals(
        dt1: *const rasqal_xsd_datetime,
        dt2: *const rasqal_xsd_datetime,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_datetime_compare2(
        dt1: *const rasqal_xsd_datetime,
        dt2: *const rasqal_xsd_datetime,
        incomparible_p: *mut libc::c_int,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_datetime_compare(
        dt1: *const rasqal_xsd_datetime,
        dt2: *const rasqal_xsd_datetime,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_datetime_get_seconds_as_decimal(
        world: *mut rasqal_world,
        dt: *mut rasqal_xsd_datetime,
    ) -> *mut rasqal_xsd_decimal;
}
extern "C" {
    pub fn rasqal_xsd_datetime_set_from_timeval(
        dt: *mut rasqal_xsd_datetime,
        tv: *mut timeval,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_datetime_set_from_unixtime(
        dt: *mut rasqal_xsd_datetime,
        clock: time_t,
    ) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_xsd_datetime_get_as_unixtime(dt: *mut rasqal_xsd_datetime) -> time_t;
}
extern "C" {
    pub fn rasqal_xsd_datetime_get_as_timeval(dt: *mut rasqal_xsd_datetime) -> *mut timeval;
}
extern "C" {
    pub fn rasqal_xsd_datetime_get_timezone_as_counted_string(
        dt: *mut rasqal_xsd_datetime,
        len_p: *mut usize,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn rasqal_xsd_datetime_get_tz_as_counted_string(
        dt: *mut rasqal_xsd_datetime,
        len_p: *mut usize,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn rasqal_regex_replace(
        world: *mut rasqal_world,
        locator: *mut raptor_locator,
        pattern: *const libc::c_char,
        regex_flags: *const libc::c_char,
        subject: *const libc::c_char,
        subject_len: usize,
        replace: *const libc::c_char,
        replace_len: usize,
        result_len_p: *mut usize,
    ) -> *mut libc::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rasqal_service_s {
    _unused: [u8; 0],
}
/// rasqal_service:
///
/// Rasqal SPARQL Protocol Service
pub type rasqal_service = rasqal_service_s;
extern "C" {
    pub fn rasqal_new_service(
        world: *mut rasqal_world,
        service_uri: *mut raptor_uri,
        query_string: *const libc::c_uchar,
        data_graphs: *mut raptor_sequence,
    ) -> *mut rasqal_service;
}
extern "C" {
    pub fn rasqal_free_service(svc: *mut rasqal_service);
}
extern "C" {
    pub fn rasqal_service_execute(svc: *mut rasqal_service) -> *mut rasqal_query_results;
}
extern "C" {
    pub fn rasqal_service_set_www(svc: *mut rasqal_service, www: *mut raptor_www) -> libc::c_int;
}
extern "C" {
    pub fn rasqal_service_set_format(
        svc: *mut rasqal_service,
        format: *const libc::c_char,
    ) -> libc::c_int;
}
pub const rasqal_triple_parts_RASQAL_TRIPLE_NONE: rasqal_triple_parts = 0;
pub const rasqal_triple_parts_RASQAL_TRIPLE_SUBJECT: rasqal_triple_parts = 1;
pub const rasqal_triple_parts_RASQAL_TRIPLE_PREDICATE: rasqal_triple_parts = 2;
pub const rasqal_triple_parts_RASQAL_TRIPLE_OBJECT: rasqal_triple_parts = 4;
pub const rasqal_triple_parts_RASQAL_TRIPLE_ORIGIN: rasqal_triple_parts = 8;
pub const rasqal_triple_parts_RASQAL_TRIPLE_GRAPH: rasqal_triple_parts = 8;
pub const rasqal_triple_parts_RASQAL_TRIPLE_SPO: rasqal_triple_parts = 7;
pub const rasqal_triple_parts_RASQAL_TRIPLE_SPOG: rasqal_triple_parts = 15;
/// rasqal_triple_parts:
/// @RASQAL_TRIPLE_NONE: no parts
/// @RASQAL_TRIPLE_SUBJECT: Subject present in a triple.
/// @RASQAL_TRIPLE_PREDICATE: Predicate present in a triple.
/// @RASQAL_TRIPLE_OBJECT: Object present in a triple.
/// @RASQAL_TRIPLE_ORIGIN: Origin/graph present in a triple.
/// @RASQAL_TRIPLE_GRAPH:  Alias for RASQAL_TRIPLE_ORIGIN
/// @RASQAL_TRIPLE_SPO: Subject, Predicate and Object present in a triple.
/// @RASQAL_TRIPLE_SPOG: Subject, Predicate, Object, Graph present in a triple.
///
/// Flags for parts of a triple.
pub type rasqal_triple_parts = u32;
/// rasqal_triples_match:
/// @world: rasqal_world object
/// @user_data: User data pointer for factory methods.
/// @bind_match: The [4]array (s,p,o,origin) bindings against the current triple match only touching triple parts given. Returns parts that were bound or 0 on failure.
/// @next_match: Move to next match.
/// @is_end: Check for end of triple match - return non-0 if is end.
/// @finish: Finish triples match and destroy any allocated memory.
/// @is_exact: non-0 if triple to match is all literal constants
/// @finished: >0 if the match has finished
///
/// Triples match structure as initialised by #rasqal_triples_source
/// method init_triples_match.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rasqal_triples_match_s {
    pub world: *mut rasqal_world,
    pub user_data: *mut libc::c_void,
    pub bind_match: ::std::option::Option<
        unsafe extern "C" fn(
            rtm: *mut rasqal_triples_match_s,
            user_data: *mut libc::c_void,
            bindings: *mut *mut rasqal_variable,
            parts: rasqal_triple_parts,
        ) -> rasqal_triple_parts,
    >,
    pub next_match: ::std::option::Option<
        unsafe extern "C" fn(rtm: *mut rasqal_triples_match_s, user_data: *mut libc::c_void),
    >,
    pub is_end: ::std::option::Option<
        unsafe extern "C" fn(rtm: *mut rasqal_triples_match_s, user_data: *mut libc::c_void)
            -> libc::c_int,
    >,
    pub finish: ::std::option::Option<
        unsafe extern "C" fn(rtm: *mut rasqal_triples_match_s, user_data: *mut libc::c_void),
    >,
    pub is_exact: libc::c_int,
    pub finished: libc::c_int,
}
#[test]
fn bindgen_test_layout_rasqal_triples_match_s() {
    assert_eq!(
        ::std::mem::size_of::<rasqal_triples_match_s>(),
        56usize,
        concat!("Size of: ", stringify!(rasqal_triples_match_s))
    );
    assert_eq!(
        ::std::mem::align_of::<rasqal_triples_match_s>(),
        8usize,
        concat!("Alignment of ", stringify!(rasqal_triples_match_s))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<rasqal_triples_match_s>())).world as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_triples_match_s),
            "::",
            stringify!(world)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<rasqal_triples_match_s>())).user_data as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_triples_match_s),
            "::",
            stringify!(user_data)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<rasqal_triples_match_s>())).bind_match as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_triples_match_s),
            "::",
            stringify!(bind_match)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<rasqal_triples_match_s>())).next_match as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_triples_match_s),
            "::",
            stringify!(next_match)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<rasqal_triples_match_s>())).is_end as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_triples_match_s),
            "::",
            stringify!(is_end)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<rasqal_triples_match_s>())).finish as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_triples_match_s),
            "::",
            stringify!(finish)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<rasqal_triples_match_s>())).is_exact as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_triples_match_s),
            "::",
            stringify!(is_exact)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<rasqal_triples_match_s>())).finished as *const _ as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(rasqal_triples_match_s),
            "::",
            stringify!(finished)
        )
    );
}
pub type rasqal_triples_match = rasqal_triples_match_s;
/// rasqal_triple_meta:
/// @bindings: Variable bindings for this triple+origin to set.
/// @triples_match: The matcher that is setting these bindings.
/// @context: Context data used by the matcher.
/// @parts: Bitmask of #rasqal_triple_parts flags describing the parts of the triple pattern that will bind to variables.  There may also be variables mentioned that are bound in other triple patterns even if @parts is 0.
/// @is_exact: unused
/// @executed: unused
///
/// Metadata for triple pattern matching for one triple pattern.
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rasqal_triple_meta {
    pub bindings: [*mut rasqal_variable; 4usize],
    pub triples_match: *mut rasqal_triples_match,
    pub context: *mut libc::c_void,
    pub parts: rasqal_triple_parts,
    pub is_exact: libc::c_int,
    pub executed: libc::c_int,
}
